CloudNativeHackathonExpressApp/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnhea
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
