CloudNativeHackathonExpressApp/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: cnhea
  name: cnhea-ingress
  namespace: cnhea
spec:
  rules:
    - host: cnhea.d93de940-c91a-4eab-8eb7-83716d1dc00d.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: cnhea
                port:
                  number: 3000
            path: /
            pathType: "Prefix"
